# LoPace

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci-cd.yml  test-only.yml
lopace/: __init__.py
notebooks/: LoPace_Complete_Guide.ipynb  README.md
screenshots/: .gitkeep  benchmark_data.csv
scripts/: README.md  __init__.py  generate_visualizations.py  requirements.txt  validate_compression_methods.py
