[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lopace"
version = "0.1.2"
description = "Lossless Optimized Prompt Accurate Compression Engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Aman Ulla"}
]
keywords = ["prompt", "compression", "tokenization", "zstd", "bpe", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "zstandard>=0.22.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/connectaman/LoPace"
Repository = "https://github.com/connectaman/LoPace"
Issues = "https://github.com/connectaman/LoPace/issues"